jsonschemadsl2ecore.trafo.opt/test/test91/invalidtests/example4.test91
{
	"baz":"Error",
	"quax":"Warn",
	"bazzz":{
		"foo":"Warn no good"
	},
	"foossss":"Fatal"
}